--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-
+MONGO_URI=mongodb+srv://elvren:j8FmF1L6ealH8nqx@cluster0.2dbkscc.mongodb.net/onlineshop?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=supersecretkey123
+EMAIL_USER=michaelenahak@gmail.com
+EMAIL_PASS=nnwaugvrdgbillkn
